# pkg/routes/api/seasons/POST.go
@@ -10,7 +10,20 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// @Tags Seasons
+// @Tags seasons
+// @Summary Creates a new season
+// @Description Creates a new season for the specified movie
+// @Param id path int true "Movie ID"
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param			seasonData	body		routes.SeasonBodyRequest			true	"Season Data"
+// @Success 200 {object} routes.DefaultMessageResponse "Season Added"
+// @Failure 400 {object} routes.DefaultMessageResponse "Bad request"
+// @Failure 401 {object} routes.DefaultMessageResponse "Unauthorized"
+// @Failure 404 {object} routes.DefaultMessageResponse "Movie not found"
+// @Failure 500 {object} routes.DefaultMessageResponse "Internal server error"
+// @Router /api/seasons/{id} [POST]
 func (m *SeasonsRoute) POST_CreateSeason(c *gin.Context) {
 	movieId := c.Param("id")
 	userId := c.GetInt("userId")
@@ -54,7 +67,7 @@ func (m *SeasonsRoute) POST_CreateSeason(c *gin.Context) {
 		return
 	}
 
-	seasonId, err := m.DB.SeasonRepository.AddSeasonToTheMovie(movieIdNum, season.UserID, season.Name, season.SeasonNumber, season.Description, releaseDate)
+	seasonId, err := m.DB.SeasonRepository.AddSeasonToTheMovie(movieIdNum, userId, season.Name, season.SeasonNumber, season.Description, releaseDate)
 	if err != nil {
 
 		log.Println(err.Error())
@@ -69,7 +82,20 @@ func (m *SeasonsRoute) POST_CreateSeason(c *gin.Context) {
 	})
 }
 
-// @Tags Seasons
+// @Tags seasons
+// @Summary Creates multiple seasons
+// @Description Creates multiple seasons for the specified movie
+// @Param id path int true "Movie ID"
+// @Accept json
+// @Produce json
+// @Security ApiKeyAuth
+// @Param			seasonsData	body		routes.SeasonsBodyRequest			true	"Seasons"
+// @Success 200 {object} routes.DefaultMessageResponse "Season Added"
+// @Failure 400 {object} routes.DefaultMessageResponse "Bad request"
+// @Failure 401 {object} routes.DefaultMessageResponse "Unauthorized"
+// @Failure 404 {object} routes.DefaultMessageResponse "Movie not found"
+// @Failure 500 {object} routes.DefaultMessageResponse "Internal server error"
+// @Router /api/seasons/{id}/multiple [POST]
 func (m *SeasonsRoute) POST_CreateSeasons(c *gin.Context) {
 	movieId := c.Param("id")
 	userId := c.GetInt("userId")
@@ -119,7 +145,7 @@ func (m *SeasonsRoute) POST_CreateSeasons(c *gin.Context) {
 			return
 		}
 
-		seasonId, err := m.DB.SeasonRepository.AddSeasonToTheMovie(movieIdNum, season.UserID, season.Name, season.SeasonNumber, season.Description, releaseDate)
+		seasonId, err := m.DB.SeasonRepository.AddSeasonToTheMovie(movieIdNum, userId, season.Name, season.SeasonNumber, season.Description, releaseDate)
 		if err != nil {
 
 			log.Println(err.Error())
